fix: 작업할당 테스트 완료